# mc_force_shoe_plugin

./: .clang-format-common.sh  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix  vcpkg.json
.github/workflows/: build.yml
etc/: ForceShoePlugin.in.yaml  mc_rtc.yaml
include/: ForceShoePlugin.h  ForceShoePluginSchemas.h
src/: ForceShoePlugin.cpp  ForceShoePlugin.h  NewPlugin.cpp  NewPlugin.h  cmt1.h  cmt3.cpp  cmt3.h  cmtdef.h  cmtmessage.cpp  cmtpacket.cpp  cmtpacket.h  cmtscan.h  main.cpp  main.h  xsens_fifoqueue.h  xsens_janitors.h  xsens_std.cpp  xsens_time.h
src/xsens_sdk/: cmt1.cpp  cmt2.cpp  cmt2.h  cmtmessage.h  cmtscan.cpp  pstdint.h  xsens_exception.cpp  xsens_exception.h  xsens_file.h  xsens_list.h  xsens_std.h  xsens_time.cpp
tests/: CMakeLists.txt  test_plugin_configuration.cpp
tests/etc/: ForceShoePlugin.yaml  mc_rtc.yaml
